Increase label size to avoid clipping

--- a/src/ui/Card/styles.less
+++ b/src/ui/Card/styles.less
@@ -66,7 +66,7 @@
 .card__english {
   font-size: 0.8em;
   overflow: hidden;
-  height: 20px;
+  height: 25px;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
